--- a/notebooks/EDA_and_processing.ipynb
+++ b/notebooks/EDA_and_processing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "fe4397ca",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "1e291a3f",
    "metadata": {},
    "outputs": [
@@ -106,13 +106,13 @@
        "4  2005-01-05   ILLINOIS           275.99216"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_folder='data/'\n",
+    "data_folder='../data/'\n",
     "df_t = pd.read_csv(data_folder + '2t.csv')\n",
     "print(df_t.shape)\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "77f95d6c",
    "metadata": {},
    "outputs": [
@@ -202,13 +202,13 @@
        "4  2005-01-05   ILLINOIS            27.008377"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_folder='data/'\n",
+    "data_folder='../data/'\n",
     "df_p = pd.read_csv(data_folder + 'tp.csv')\n",
     "print(df_p.shape)\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "cd3f9bd1",
    "metadata": {},
    "outputs": [
@@ -298,13 +298,13 @@
        "4    GEORGIA  2005   26.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_folder='data/'\n",
+    "data_folder='../data/'\n",
     "df_yield = pd.read_csv(data_folder + 'yield.csv')\n",
     "print(df_yield.shape)\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -318,6 +318,374 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3fc7aa3",
+   "metadata": {},
+   "source": [
+    "## Data Processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "880082ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_t.rename(columns={\"state_name\": \"state\", \"2m max temperature\": \"temp_K\"}, inplace=True)\n",
+    "df_p.rename(columns={\"state_name\": \"state\", \"total precipitation\": \"precip_mm\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "11614bbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>temp_C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2005-01-01</td>\n",
+       "      <td>ILLINOIS</td>\n",
+       "      <td>8.83935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2005-01-02</td>\n",
+       "      <td>ILLINOIS</td>\n",
+       "      <td>14.42990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2005-01-03</td>\n",
+       "      <td>ILLINOIS</td>\n",
+       "      <td>7.04630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2005-01-04</td>\n",
+       "      <td>ILLINOIS</td>\n",
+       "      <td>4.60946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2005-01-05</td>\n",
+       "      <td>ILLINOIS</td>\n",
+       "      <td>2.84216</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date     state    temp_C\n",
+       "0  2005-01-01  ILLINOIS   8.83935\n",
+       "1  2005-01-02  ILLINOIS  14.42990\n",
+       "2  2005-01-03  ILLINOIS   7.04630\n",
+       "3  2005-01-04  ILLINOIS   4.60946\n",
+       "4  2005-01-05  ILLINOIS   2.84216"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert kelvin to celsius\n",
+    "df_t.iloc[:, 2:] = df_t.iloc[:, 2:] - 273.15\n",
+    "df_t.rename(columns={\"temp_K\": \"temp_C\"}, inplace=True)\n",
+    "df_t.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "90e70b2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values in each column: state              0\n",
+      "year               0\n",
+      "yield              0\n",
+      "avg_temp_C         0\n",
+      "max_temp_C         0\n",
+      "min_temp_C         0\n",
+      "total_precip_mm    0\n",
+      "avg_precip_mm      0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reshape date\n",
+    "df_t[\"date\"] = pd.to_datetime(df_t[\"date\"])\n",
+    "df_t[\"year\"] = df_t[\"date\"].dt.year\n",
+    "df_t[\"month\"] = df_t[\"date\"].dt.month\n",
+    "\n",
+    "df_p[\"date\"] = pd.to_datetime(df_p[\"date\"])\n",
+    "df_p[\"year\"] = df_p[\"date\"].dt.year\n",
+    "df_p[\"month\"] = df_p[\"date\"].dt.month\n",
+    "\n",
+    "#filter by growing season (ie. May–September)\n",
+    "grow_months = [5, 6, 7, 8, 9]\n",
+    "df_t_grow = df_t[df_t[\"month\"].isin(grow_months)]\n",
+    "df_p_grow = df_p[df_p[\"month\"].isin(grow_months)]\n",
+    "\n",
+    "# Merge dataframes\n",
+    "t_features = df_t_grow.groupby([\"state\", \"year\"]).agg(\n",
+    "    avg_temp_C=(\"temp_C\", \"mean\"),\n",
+    "    max_temp_C=(\"temp_C\", \"max\"),\n",
+    "    min_temp_C=(\"temp_C\", \"min\"),\n",
+    ").reset_index()\n",
+    "\n",
+    "p_features = df_p_grow.groupby([\"state\", \"year\"]).agg(\n",
+    "    total_precip_mm=(\"precip_mm\", \"sum\"),\n",
+    "    avg_precip_mm=(\"precip_mm\", \"mean\")\n",
+    ").reset_index()\n",
+    "\n",
+    "df_yield.rename(columns={\"state_name\": \"state\"}, inplace=True)  \n",
+    "full_df = df_yield.merge(t_features, on=[\"state\", \"year\"]).merge(p_features, on=[\"state\", \"year\"])\n",
+    "full_df.head()\n",
+    "\n",
+    "# Check for missing values\n",
+    "missing_values = full_df.isnull().sum()\n",
+    "print(\"Missing values in each column:\", missing_values)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d8167bf",
+   "metadata": {},
+   "source": [
+    "## Add extrem event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3d8d3be5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>year</th>\n",
+       "      <th>yield</th>\n",
+       "      <th>avg_temp_C</th>\n",
+       "      <th>max_temp_C</th>\n",
+       "      <th>min_temp_C</th>\n",
+       "      <th>total_precip_mm</th>\n",
+       "      <th>avg_precip_mm</th>\n",
+       "      <th>hot_days</th>\n",
+       "      <th>freezing_days</th>\n",
+       "      <th>dry_days</th>\n",
+       "      <th>flooding_days</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ILLINOIS</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>46.5</td>\n",
+       "      <td>28.029765</td>\n",
+       "      <td>36.79556</td>\n",
+       "      <td>10.09295</td>\n",
+       "      <td>351.391859</td>\n",
+       "      <td>2.296679</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>88</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>INDIANA</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>27.139371</td>\n",
+       "      <td>34.91238</td>\n",
+       "      <td>10.42950</td>\n",
+       "      <td>419.308881</td>\n",
+       "      <td>2.740581</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>IOWA</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>52.5</td>\n",
+       "      <td>26.673741</td>\n",
+       "      <td>35.29424</td>\n",
+       "      <td>8.72470</td>\n",
+       "      <td>400.706764</td>\n",
+       "      <td>2.618998</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>92</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>KANSAS</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>29.811761</td>\n",
+       "      <td>37.96978</td>\n",
+       "      <td>12.98600</td>\n",
+       "      <td>390.994898</td>\n",
+       "      <td>2.555522</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>88</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MINNESOTA</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>45.5</td>\n",
+       "      <td>24.188087</td>\n",
+       "      <td>32.77953</td>\n",
+       "      <td>6.20060</td>\n",
+       "      <td>460.882343</td>\n",
+       "      <td>3.012303</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       state  year  yield  avg_temp_C  max_temp_C  min_temp_C  \\\n",
+       "0   ILLINOIS  2005   46.5   28.029765    36.79556    10.09295   \n",
+       "1    INDIANA  2005   49.0   27.139371    34.91238    10.42950   \n",
+       "2       IOWA  2005   52.5   26.673741    35.29424     8.72470   \n",
+       "3     KANSAS  2005   37.0   29.811761    37.96978    12.98600   \n",
+       "4  MINNESOTA  2005   45.5   24.188087    32.77953     6.20060   \n",
+       "\n",
+       "   total_precip_mm  avg_precip_mm  hot_days  freezing_days  dry_days  \\\n",
+       "0       351.391859       2.296679       2.0            0.0        88   \n",
+       "1       419.308881       2.740581       0.0            0.0        90   \n",
+       "2       400.706764       2.618998       1.0            0.0        92   \n",
+       "3       390.994898       2.555522      16.0            0.0        88   \n",
+       "4       460.882343       3.012303       0.0            0.0        72   \n",
+       "\n",
+       "   flooding_days  \n",
+       "0            0.0  \n",
+       "1            2.0  \n",
+       "2            2.0  \n",
+       "3            3.0  \n",
+       "4            1.0  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Hot days > 35°C\n",
+    "hot_days = df_t_grow[df_t_grow[\"temp_C\"] > 35] \\\n",
+    "    .groupby([\"state\", \"year\"]).size().reset_index(name=\"hot_days\")\n",
+    "\n",
+    "# Freezing days < 5°C\n",
+    "freezing_days = df_t_grow[df_t_grow[\"temp_C\"] < 5] \\\n",
+    "    .groupby([\"state\", \"year\"]).size().reset_index(name=\"freezing_days\")\n",
+    "\n",
+    "# Dry days < 1 mm\n",
+    "dry_days = df_p_grow[df_p_grow[\"precip_mm\"] < 1] \\\n",
+    "    .groupby([\"state\", \"year\"]).size().reset_index(name=\"dry_days\")\n",
+    "\n",
+    "# Flooding days > 20 mm\n",
+    "flooding_days = df_p_grow[df_p_grow[\"precip_mm\"] > 20] \\\n",
+    "    .groupby([\"state\", \"year\"]).size().reset_index(name=\"flooding_days\")\n",
+    "    \n",
+    "extreme_features = hot_days \\\n",
+    "    .merge(freezing_days, on=[\"state\", \"year\"], how=\"outer\") \\\n",
+    "    .merge(dry_days, on=[\"state\", \"year\"], how=\"outer\") \\\n",
+    "    .merge(flooding_days, on=[\"state\", \"year\"], how=\"outer\")\n",
+    "\n",
+    "# Fill NaNs with 0 (no extreme events observed in that year)\n",
+    "extreme_features.fillna(0, inplace=True)\n",
+    "\n",
+    "# Then merge with your main feature set\n",
+    "full_df2 = full_df.merge(extreme_features, on=[\"state\", \"year\"], how=\"left\")\n",
+    "full_df2.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "fbd00a37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No freeze days in the dataset - remove this column\n",
+    "full_df2.drop(columns=[\"freezing_days\"], inplace=True)\n",
+    "full_df2\n",
+    "\n",
+    "# to csv\n",
+    "full_df2.to_csv('../data/df_processed.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
