--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "616b72ce",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "d141e516",
    "metadata": {},
    "outputs": [
@@ -167,14 +167,14 @@
        "4       460.882343       3.012303       0.0        72            1.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_folder='data/'\n",
-    "df = pd.read_csv(data_folder + 'full_df.csv')\n",
+    "data_folder='../data/'\n",
+    "df = pd.read_csv(data_folder + 'df_processed.csv')\n",
     "print(df.shape)\n",
     "pd.set_option('display.max_columns', None)\n",
     "df.head()"
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "04489fa0",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
        "[180 rows x 17 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "d2a25c82",
    "metadata": {},
    "outputs": [
@@ -530,27 +530,23 @@
    "source": [
     "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "\n",
-    "# Store scores\n",
     "mae_list = []\n",
     "rmse_list = []\n",
     "r2_list = []\n",
     "\n",
-    "# Loop over folds\n",
+    "# K-fold cross-validation\n",
     "for train_index, val_index in kf.split(X):\n",
     "    X_train, X_val = X.iloc[train_index], X.iloc[val_index]\n",
     "    y_train, y_val = y.iloc[train_index], y.iloc[val_index]\n",
     "\n",
-    "    # Train model\n",
     "    model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
     "    model.fit(X_train, y_train)\n",
     "\n",
-    "    # Predict and evaluate\n",
     "    y_pred = model.predict(X_val)\n",
     "    mae_list.append(mean_absolute_error(y_val, y_pred))\n",
     "    rmse_list.append(np.sqrt(mean_squared_error(y_val, y_pred)))\n",
     "    r2_list.append(r2_score(y_val, y_pred))\n",
     "\n",
-    "# Show average results\n",
     "print(\"Average MAE:\", np.mean(mae_list))\n",
     "print(\"Average RMSE:\", np.mean(rmse_list))\n",
     "print(\"Average R²:\", np.mean(r2_list))"
